Add basic codebase for media app.

--- a/mobile-kotox-media/src/main/AndroidManifest.xml
+++ b/mobile-kotox-media/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cz.kotox.android.task">
+    package="cz.kotox.android.media">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="cz.kotox.task.list.TaskApplication"
+        android:name="cz.kotox.media.MediaApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
