--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,7 +33,7 @@ okhttp = "4.9.3"
 retrofit = "2.9.0"
 room = "2.4.2"
 timber = "5.0.1"
-camerax = "1.2.0-rc01"
+camerax = "1.2.0"
 
 [plugins]
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
