--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-androidGradlePlugin = "7.2.1"
+androidGradlePlugin = "7.4.0-rc03"
 androidMaterial = "1.6.1"
 androidxActitivty = "1.4.0"
 androidxAppcompat = "1.4.2"
@@ -16,7 +16,7 @@ accompanist = "0.25.1"
 coil = "2.1.0"
 constraint = "1.0.1"
 detekt = "1.19.0"
-desugarJdkLibs = "1.1.5"
+desugarJdkLibs = "2.0.0"
 firebase = "18.2.11"
 firebaseGradlePlugin = "2.9.1"
 gradleDependencyUpdate = "0.42.0"
