Move SDK versioning to version catalog.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,10 @@
 [versions]
 
+
+sdk-compile = "33"
+sdk-target = "33"
+sdk-min = "23"
+
 # ==================================================================================================
 # AGP
 # ---
