--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -151,6 +151,7 @@ androidx-lifecycle-viewmodel-savedstate = { module = "androidx.lifecycle:lifecyc
 
 androidx-constraint-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "androidx-constraintlayout-compose" }
 
+junit = { module = "junit:junit", version.ref = "junit" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-test-ext-junit" }
 androidx-test-ext-truth = { module = "androidx.test.ext:truth", version.ref = "androidx-test-ext-truth" }
 
@@ -187,7 +188,6 @@ google-firebase-core = { module = "com.google.firebase:firebase-core", version.r
 google-firebase-crashlytics-ktx = { module = "com.google.firebase:firebase-crashlytics-ktx", version.ref = "google-firebase-crashlytics" }
 google-firebase-crashlytics-gradle = { module = "com.google.firebase:firebase-crashlytics-gradle", version.ref = "google-firebase-crashlytics-gradle" }
 
-junit = { module = "junit:junit", version.ref = "junit" }
 kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 
@@ -202,9 +202,11 @@ moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "mosh
 
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-loggingInterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+okhttp-mock-web-server = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
 
 retorofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retorofit-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
+
 
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "androidx-room" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidx-room" }
@@ -258,17 +260,28 @@ androidx-lifecycle = [
 
 androidx-room = ["androidx-room-ktx", "androidx-room-runtime"]
 
-#androidx-test = [
-#    "androidx-test-espresso-core",
-#    "androidx-test-espresso-idling-concurrent",
-#    "androidx-test-espresso-idling-resource", # for synchronization with background jobs
-#    "androidx-test-espresso-intents",
-#    "androidx-test-espresso-web", # for WebView support
-#    "androidx-test-ext-junit",
-#    "androidx-test-rules",
-#    "androidx-test-runner",
-#    "androidx-test-uiautomator",
-#]
+
+test-android = [
+    "androidx-test-core",
+    "androidx-test-ext-truth",
+    "androidx-test-rules",
+    "androidx-test-runner",
+    "androidx-test-uiautomator",
+    "androidx-compose-ui-test",
+    "androidx-compose-ui-test-junit4",
+    "androidx-compose-ui-test-manifest",
+    "mockk-instrumented"
+]
+
+test-unit = [
+    "junit",
+    "androidx-test-core",
+    "androidx-test-ext-junit",
+    "androidx-test-ext-truth",
+    "androidx-test-rules",
+    "mockk-unit",
+    "okhttp-mock-web-server"
+]
 
 google-accompanist = [
     "accompanist-flowlayout",
