--- a/mobile-kotox-playground/src/main/AndroidManifest.xml
+++ b/mobile-kotox-playground/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="cz.kotox.media.MediaApplication"
+        android:name="cz.kotox.playground.PlaygroundApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
