--- a/mobile-kotox-media/src/main/AndroidManifest.xml
+++ b/mobile-kotox-media/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
 
         <activity
-            android:name="cz.kotox.playground.ui.MainActivity"
+            android:name="cz.kotox.media.ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
