Update i18n-ui structure.

--- a/i18n-ui/src/main/AndroidManifest.xml
+++ b/i18n-ui/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application>
         <activity
-            android:name="cz.kotox.i18n.ui.country.PhoneCountryCodeActivity"
+            android:name="cz.kotox.i18n.ui.phone.screen.PhoneCountryCodeActivity"
             android:exported="true"/>
     </application>
 
