--- a/kotox-mobile-playground/src/main/AndroidManifest.xml
+++ b/kotox-mobile-playground/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cz.kotox.android.media">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -24,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="cz.kotox.playground.ui.bouncingbox.BouncingBoxActivity"
+            android:exported="true" />
 
 
     </application>
