--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -93,7 +93,7 @@ google-libphonenumber = "8.13.5"
 
 coil = "2.1.0"
 detekt = "1.19.0"
-gradleDependencyUpdate = "0.42.0"
+gradleDependencyUpdate = "0.46.0"
 junit = "4.13.2"
 kotlinx-coroutines = "1.4.1"
 ktlint = "10.3.0"
@@ -114,6 +114,8 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 
 [libraries]
+#poeditor-gradle = { module ="com.github.hyperdevs-team:poeditor-android-gradle-plugin", version="3.2.0"}
+
 android-gradle = { module = "com.android.tools.build:gradle", version.ref = "android-gradle" }
 android-material = { module = "com.google.android.material:material", version.ref = "androidMaterial" }
 android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version = "2.0.0" }
