--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -93,7 +93,7 @@ google-libphonenumber = "8.13.5"
 
 coil = "2.1.0"
 detekt = "1.19.0"
-gradleDependencyUpdate = "0.42.0"
+gradleDependencyUpdate = "0.46.0"
 junit = "4.13.2"
 kotlinx-coroutines = "1.4.1"
 ktlint = "10.3.0"
@@ -114,6 +114,7 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 
 [libraries]
+
 android-gradle = { module = "com.android.tools.build:gradle", version.ref = "android-gradle" }
 android-material = { module = "com.google.android.material:material", version.ref = "androidMaterial" }
 android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version = "2.0.0" }
@@ -202,7 +203,10 @@ leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version.re
 libphonenumber = { module = "com.googlecode.libphonenumber:libphonenumber", version.ref = "libphonenumber"}
 
 moshi-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshi" }
-moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshi" }
+moshi = { group = "com.squareup.moshi", name = "moshi", version.ref = "moshi"}
+moshi-kotlin = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshi"}
+moshi-adapters = { group = "com.squareup.moshi", name = "moshi-adapters", version.ref = "moshi"}
+
 
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-loggingInterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
@@ -298,6 +302,8 @@ google-accompanist = [
     "accompanist-permissions",
     "accompanist-systemuicontroller",
 ]
+
+moshi = ["moshi", "moshi-kotlin", "moshi-adapters"]
 
 #squareup-moshi = ["squareup-moshi", "squareup-moshi-adapters"]
 #squareup-okhttp = ["squareup-okhttp", "squareup-okhttp-loggingInterceptor"]
