Introduce playground skeleton for scanner line animation.

--- a/kotox-mobile-playground/src/main/AndroidManifest.xml
+++ b/kotox-mobile-playground/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name="cz.kotox.playground.ui.bouncingbox.BouncingBoxActivity"
             android:exported="true" />
 
+        <activity
+            android:name="cz.kotox.playground.ui.scannerline.ScannerLineActivity"
+            android:exported="true" />
+
 
     </application>
 
