--- a/kotox-mobile-strings/src/main/AndroidManifest.xml
+++ b/kotox-mobile-strings/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cz.kotox.android.starter">
+    package="cz.kotox.android.strings">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="cz.kotox.starter.StarterApplication"
+        android:name="cz.kotox.starter.StringsApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
