--- a/kotox-mobile-strings/src/main/AndroidManifest.xml
+++ b/kotox-mobile-strings/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="cz.kotox.starter.StringsApplication"
+        android:name="cz.kotox.strings.StringsApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
 
         <activity
-            android:name="cz.kotox.starter.ui.MainActivity"
+            android:name="cz.kotox.strings.ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
