Fix configuration cache issue.

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,8 @@ org.gradle.jvmargs=-Xmx5g \
 android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+## enable after upgrading to 7.3-alpha04 -> https://issuetracker.google.com/issues/231997838
+## or enable after upgrading to 8.1RC1+ ->https://github.com/gradle/gradle/pull/23262
+# org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache-problems=warn
