--- a/common/core-android/src/main/AndroidManifest.xml
+++ b/common/core-android/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cz.kotox.common.core.android">
 
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" /> <!-- Legacy screen capture detection  -->
+    <uses-permission
+        android:name="android.permission.READ_MEDIA_IMAGES"
+        android:maxSdkVersion="33" /> <!-- Legacy screen capture detection -->
+
     <queries>
         <intent>
             <action android:name="android.intent.action.VIEW" />
