--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ sdk-min = "26"
 # https://developer.android.com/studio/releases/gradle-plugin#updating-gradle
 # https://developer.android.com/studio/releases/gradle-plugin#min-kotlin-version
 # ==================================================================================================
-android-gradle = "8.1.2"
+androidGradlePlugin = "8.1.2"
 
 # ==================================================================================================
 # Compose compiler / Kotlin
@@ -24,14 +24,14 @@ android-gradle = "8.1.2"
 
 # KSP - https://github.com/google/ksp/releases
 # ==================================================================================================
-androidx-compose-compiler = "1.5.3"
+androidxComposeCompiler = "1.5.3"
 kotlin = "1.9.10"
 ksp = "1.9.10-1.0.13"
 
 # ==================================================================================================
 # HILT - https://github.com/google/dagger/releases
 # ------------------------------------------------
-androidx-hilt = "2.48.1"
+hilt = "2.48.1"
 androidx-hilt-navigation-compose = "1.1.0"
 
 # ==================================================================================================
@@ -107,17 +107,8 @@ retrofit = "2.9.0"
 timber = "5.0.1"
 mockk = "1.13.5"
 
-
-
-[plugins]
-detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
-gradleDependencyUpdate = { id = "com.github.ben-manes.versions", version.ref = "gradleDependencyUpdate" }
-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
-
 [libraries]
 
-android-gradle = { module = "com.android.tools.build:gradle", version.ref = "android-gradle" }
 android-material = { module = "com.google.android.material:material", version.ref = "androidMaterial" }
 android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version = "2.0.0" }
 
@@ -137,11 +128,10 @@ androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidx-datastore" }
 
-androidx-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "androidx-hilt" }
-androidx-hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "androidx-hilt" }
+androidx-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+androidx-hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidx-hilt-navigation-compose" }
-androidx-hilt-gradle = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "androidx-hilt" }
-androidx-hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "androidx-hilt" }
+androidx-hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
 
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
@@ -197,7 +187,6 @@ google-firebase-crashlytics-ktx = { module = "com.google.firebase:firebase-crash
 google-firebase-crashlytics-gradle = { module = "com.google.firebase:firebase-crashlytics-gradle", version.ref = "google-firebase-crashlytics-gradle" }
 google-libphonenumber = { module = "com.googlecode.libphonenumber:libphonenumber", version.ref = "google-libphonenumber" }
 
-kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
@@ -236,7 +225,21 @@ timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 mockk-unit = { module = "io.mockk:mockk", version.ref = "mockk" }
 mockk-instrumented = { module = "io.mockk:mockk-android", version.ref = "mockk" }
 
+# Dependencies of the included build-logic
+android-gradlePlugin = { module = "com.android.tools.build:gradle", version.ref = "androidGradlePlugin" }
+kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 
+[plugins]
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
+gradleDependencyUpdate = { id = "com.github.ben-manes.versions", version.ref = "gradleDependencyUpdate" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
+
+# Plugins defined by this project
 
 [bundles]
 
