--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,7 +32,7 @@ ksp = "1.9.10-1.0.13"
 # HILT - https://github.com/google/dagger/releases
 # ------------------------------------------------
 hilt = "2.48.1"
-androidx-hilt-navigation-compose = "1.1.0"
+hiltExt = "1.1.0"
 
 # ==================================================================================================
 # AndroidX libs
@@ -128,10 +128,18 @@ androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidx-datastore" }
 
-androidx-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
-androidx-hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
-androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidx-hilt-navigation-compose" }
-androidx-hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
+#androidx-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+#androidx-hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
+#androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidx-hilt-navigation-compose" }
+#androidx-hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
+
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+hilt-ext-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hiltExt" }
+hilt-ext-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hiltExt" }
+hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltExt" }
+
 
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
@@ -240,6 +248,7 @@ kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 
 # Plugins defined by this project
+cz-kotox-android-hilt = { id = "cz.kotox.android.hilt", version = "unspecified" }
 
 [bundles]
 
