--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -249,6 +249,7 @@ android-application = { id = "com.android.application", version.ref = "androidGr
 
 # Plugins defined by this project
 cz-kotox-android-hilt = { id = "cz.kotox.android.hilt", version = "unspecified" }
+cz-kotox-android-library = { id = "cz.kotox.android.library", version = "unspecified" }
 
 [bundles]
 
