--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -243,6 +243,8 @@ kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 
 # Plugins defined by this project
+cz-kotox-android-application = { id = "cz.kotox.android.application", version = "unspecified" }
+cz-kotox-android-application-compose = { id = "cz.kotox.android.application.compose", version = "unspecified" }
 cz-kotox-android-feature = { id = "cz.kotox.android.feature", version = "unspecified" }
 cz-kotox-android-hilt = { id = "cz.kotox.android.hilt", version = "unspecified" }
 cz-kotox-android-library = { id = "cz.kotox.android.library", version = "unspecified" }
