--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,12 +46,7 @@ androidx-activity = "1.4.0"
 androidx-annotation = "1.2.0" # Expect compilation issue when upgrading to 1.3.0 https://developer.android.com/jetpack/androidx/releases/annotation
 androidx-appcompat = "1.4.2"
 androidx-camera = "1.2.0"
-androidx-compose-animation = "1.3.2"
-androidx-compose-foundation = "1.3.1"
-androidx-compose-material = "1.3.1"
-androidx-compose-material3 = "1.0.1"
-androidx-compose-runtime = "1.3.2"
-androidx-compose-ui = "1.3.2"
+androidxComposeBom = "2023.10.01"
 androidx-constraintlayout = "2.1.2"
 androidx-constraintlayout-compose = "1.0.1"
 androidx-core = "1.8.0"
@@ -116,15 +111,20 @@ androidx-activity-compose = { module = "androidx.activity:activity-compose", ver
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "androidx-activity" }
 
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
-androidx-compose-animation = { module = "androidx.compose.animation:animation", version.ref = "androidx-compose-animation" }
-androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "androidx-compose-foundation" }
-androidx-compose-foundation-layout = { module = "androidx.compose.foundation:foundation-layout", version.ref = "androidx-compose-foundation" }
-androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "androidx-compose-material" }
-androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "androidx-compose-material3" }
-androidx-compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "androidx-compose-runtime" }
-androidx-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "androidx-compose-ui" }
-androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "androidx-compose-ui" }
-androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "androidx-compose-ui" }
+
+androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidxComposeBom" }
+androidx-compose-animation = { group = "androidx.compose.animation", name = "animation" }
+androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
+androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout"}
+androidx-compose-material = { group = "androidx.compose.material",  name = "material" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime"}
+androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+androidx-compose-ui-util = { group = "androidx.compose.ui", name = "ui-util" }
+androidx-compose-ui-test = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidx-datastore" }
 
@@ -153,10 +153,6 @@ junit = { module = "junit:junit", version.ref = "junit" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-test-ext-junit" }
 androidx-test-ext-truth = { module = "androidx.test.ext:truth", version.ref = "androidx-test-ext-truth" }
 
-androidx-compose-ui-test = { module = "androidx.compose.ui:ui-test", version.ref = "androidx-compose-ui" }
-androidx-compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-compose-ui" }
-androidx-compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "androidx-compose-ui" }
-androidx-compose-ui-util = { module = "androidx.compose.ui:ui-util", version.ref = "androidx-compose-ui" }
 androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test-core" }
 androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx-test-espresso" }
 androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidx-test-rules" }
@@ -262,18 +258,6 @@ androidx-camera = [
     "androidx-camera-view",
 ]
 
-androidx-compose = [
-    "androidx-compose-animation",
-    "androidx-compose-foundation",
-    "androidx-compose-foundation-layout",
-    "androidx-compose-material",
-    "androidx-compose-material3",
-    "androidx-compose-runtime",
-    "androidx-compose-ui",
-    "androidx-compose-ui-tooling",
-    "androidx-compose-ui-tooling-preview",
-]
-
 androidx-datastore = ["androidx-datastore-preferences"]
 androidx-lifecycle = [
     "androidx-lifecycle-runtime-compose",
@@ -296,7 +280,6 @@ test-android = [
     "androidx-test-runner",
     "androidx-test-uiautomator",
     "androidx-compose-ui-test",
-    "androidx-compose-ui-test-junit4",
     "androidx-compose-ui-test-manifest",
     "mockk-instrumented",
     "kotlinx-coroutines-test"
