--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -74,6 +74,13 @@ androidx-work = "2.7.1"
 # ==================================================================================================
 google-accompanist = "0.28.0"
 
+
+# ==================================================================================================
+# Linters
+# ==================================================================================================
+detekt = "1.23.1"
+ktlint = "11.5.1"
+
 # ==================================================================================================
 # Other libs
 # ==================================================================================================
@@ -89,11 +96,9 @@ google-libphonenumber = "8.13.5"
 
 coil = "2.1.0"
 commonmark = "0.21.0"
-detekt = "1.19.0"
 gradleDependencyUpdate = "0.46.0"
 junit = "4.13.2"
 kotlinx-coroutines = "1.4.1"
-ktlint = "10.3.0"
 leakcanary = "2.9.1"
 libphonenumber = "8.13.5"
 moshi = "1.13.0"
@@ -115,10 +120,10 @@ androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "a
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidxComposeBom" }
 androidx-compose-animation = { group = "androidx.compose.animation", name = "animation" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
-androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout"}
-androidx-compose-material = { group = "androidx.compose.material",  name = "material" }
+androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout" }
+androidx-compose-material = { group = "androidx.compose.material", name = "material" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
-androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime"}
+androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-compose-ui-util = { group = "androidx.compose.ui", name = "ui-util" }
@@ -228,6 +233,8 @@ mockk-instrumented = { module = "io.mockk:mockk-android", version.ref = "mockk" 
 android-gradlePlugin = { module = "com.android.tools.build:gradle", version.ref = "androidGradlePlugin" }
 kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
+detekt-gradlePlugin = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
+ktint-gradlePlugin = { module = "org.jlleitschuh.gradle:ktlint-gradle", version.ref = "ktlint" }
 
 [plugins]
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
@@ -246,6 +253,7 @@ cz-kotox-android-hilt = { id = "cz.kotox.android.hilt", version = "unspecified" 
 cz-kotox-android-library = { id = "cz.kotox.android.library", version = "unspecified" }
 cz-kotox-android-library-compose = { id = "cz.kotox.android.library.compose", version = "unspecified" }
 cz-kotox-android-poeditor = { id = "cz.kotox.android.poeditor", version = "unspecified" }
+cz-kotox-linters = { id = "cz.kotox.linters", version = "unspecified" }
 
 [bundles]
 
