Apply lint rules to the codeCheck process. Fix lint issues.

--- a/.github/workflows/android_pr_code_check.yml
+++ b/.github/workflows/android_pr_code_check.yml
@@ -73,6 +73,9 @@ jobs:
       - name: run detekt
         run: ./gradlew detekt
 
+      - name: run lint
+        run: ./gradlew lint
+
       - name: failure comment
         if: ${{ failure() }}
         uses: actions/github-script@v4
