--- a/.github/workflows/android_pr_code_check.yml
+++ b/.github/workflows/android_pr_code_check.yml
@@ -76,6 +76,14 @@ jobs:
       - name: run lint
         run: ./gradlew lint
 
+      - name: konsist
+        run: ./gradlew konsist_test:test --rerun-tasks
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: konsist-report
+          path: ./konsist_test/build/reports/*
+
       - name: failure comment
         if: ${{ failure() }}
         uses: actions/github-script@v4
@@ -99,7 +107,7 @@ jobs:
               sha: '${{ steps.sha.outputs.result }}',
               state: 'failure',
               context: 'Android Code check',
-              description: 'ktlint & detekt tasks failed ❌',
+              description: 'Some task from the set ktlint, detekt, lint & konsist failed ❌',
             });
 
       - name: success comment
@@ -125,5 +133,5 @@ jobs:
               sha: '${{ steps.sha.outputs.result }}',
               state: 'success',
               context: 'Android Code check',
-              description: 'ktlint & detekt tasks succeeded ✅',
+              description: 'ktlint, detekt, lint & konsist tasks succeeded ✅',
             });
