Introduce an idea how to avoid configuration change caused by the orientation change. This way we can keep orientation one way. Listen for orientation events and update UI accordingly manually. This will avoid UX disruption during switch of the camera.

--- a/common/camera/src/main/AndroidManifest.xml
+++ b/common/camera/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <application>
         <activity
             android:name="cz.kotox.common.camera.custom.CameraCustomActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
         </activity>
     </application>
