Split adaptive layout and multi layout for camera so multi layout will not get lost whereas we can continue to work on the adaptive layout.

--- a/common/camera/src/main/AndroidManifest.xml
+++ b/common/camera/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
     <application>
         <activity
             android:name="cz.kotox.common.camera.custom.CameraCustomActivity"
-            android:screenOrientation="portrait"
             android:exported="true">
         </activity>
     </application>
 
 </manifest>
+<!--android:screenOrientation="portrait"-->
