--- a/extras/detekt.yml
+++ b/extras/detekt.yml
@@ -741,7 +741,7 @@ style:
   UnusedPrivateClass:
     active: true
   UnusedPrivateMember:
-    active: true
+    active: false
     allowedNames: ''
   UnusedPrivateProperty:
     active: true
