--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ sdk-min = "26"
 # AGP x Gradle Compatibility https://developer.android.com/build/releases/gradle-plugin#updating-gradle
 # AGP x AS Compatibility: https://developer.android.com/studio/releases#android_gradle_plugin_and_android_studio_compatibility
 # ==================================================================================================
-androidGradlePlugin = "8.1.2"
+androidGradlePlugin = "8.2.2"
 
 # ==================================================================================================
 # Compose compiler / Kotlin
@@ -30,14 +30,14 @@ androidGradlePlugin = "8.1.2"
 # Compose x Kotlin Compatibility: https://developer.android.com/jetpack/androidx/releases/compose-kotlin
 # KSP - https://github.com/google/ksp/releases
 # ==================================================================================================
-androidxComposeCompiler = "1.5.3"
-kotlin = "1.9.10"
-ksp = "1.9.10-1.0.13"
+androidxComposeCompiler = "1.5.7"
+kotlin = "1.9.21"
+ksp = "1.9.21-1.0.16"
 
 # ==================================================================================================
 # HILT - https://github.com/google/dagger/releases
 # ------------------------------------------------
-hilt = "2.48.1"
+hilt = "2.50"
 hiltExt = "1.1.0"
 
 # ==================================================================================================
@@ -48,28 +48,28 @@ hiltExt = "1.1.0"
 # https://android-developers.googleblog.com/2022/06/independent-versioning-of-Jetpack-Compose-libraries.html
 # https://developer.android.com/jetpack/androidx/versions
 # ==================================================================================================
-androidx-activity = "1.4.0"
+androidx-activity = "1.8.2"
 androidx-annotation = "1.2.0" # Expect compilation issue when upgrading to 1.3.0 https://developer.android.com/jetpack/androidx/releases/annotation
-androidx-appcompat = "1.4.2"
-androidx-camera = "1.3.0"
-androidxComposeBom = "2023.10.01"
+androidx-appcompat = "1.6.1"
+androidx-camera = "1.3.1"
+androidxComposeBom = "2024.01.00"
 androidx-constraintlayout = "2.1.2"
 androidx-constraintlayout-compose = "1.0.1"
-androidx-core = "1.8.0"
+androidx-core = "1.12.0"
 androidx-datastore = "1.0.0"
 androidx-exifinterface = "1.3.2"
 androidx-fragment = "1.4.0"
 androidx-gridlayout = "1.0.0"
-androidx-lifecycle = "2.6.0-alpha01"
+androidx-lifecycle = "2.7.0"
 androidx-navigation = "2.4.1"
 androidx-palette = "1.0.0"
 androidx-recyclerview = "1.2.1"
-androidx-room = "2.4.3"
-androidx-test-espresso = "3.5.0"
-androidx-test-ext-junit = "1.1.4"
-androidx-test-ext-truth = "1.4.0"
+androidx-room = "2.6.1"
+androidx-test-espresso = "3.5.1"
+androidx-test-ext-junit = "1.1.5"
+androidx-test-ext-truth = "1.5.0"
 androidx-test-core = "1.5.0"
-androidx-test-runner = "1.5.1"
+androidx-test-runner = "1.5.2"
 androidx-test-rules = "1.5.0"
 androidx-test-uiautomator = "2.2.0"
 androidx-window = "1.0.0"
@@ -78,39 +78,41 @@ androidx-work = "2.7.1"
 # ==================================================================================================
 # Google Accompanist - follow compose version https://github.com/google/accompanist
 # ==================================================================================================
-google-accompanist = "0.28.0"
+google-accompanist = "0.32.0"
 
 
 # ==================================================================================================
 # Linters
 # ==================================================================================================
-detekt = "1.23.1"
+detekt = "1.23.4"
 konsist = "0.13.0"
-ktlint = "11.5.1"
-lint = "31.1.2"
+ktlint = "11.6.1"
+lint = "31.2.2"
 
 # ==================================================================================================
 # Other libs
 # ==================================================================================================
 
-androidMaterial = "1.6.1"
+desugar-jdk =  "2.0.4"
 
-google-firebase-appdistribution-gradle = "3.0.3"
-google-firebase-config = "21.0.1"
-google-firebase-core = "20.0.2"
-google-firebase-crashlytics = "18.2.6"
-google-firebase-crashlytics-gradle = "2.9.2"
+androidMaterial = "1.11.0"
+
+google-firebase-appdistribution-gradle = "4.0.1"
+google-firebase-config = "21.6.0"
+google-firebase-core = "21.1.1"
+google-firebase-crashlytics = "18.6.1"
+google-firebase-crashlytics-gradle = "2.9.9"
 google-libphonenumber = "8.13.5"
 
-coil = "2.1.0"
+coil = "2.5.0"
 commonmark = "0.21.0"
-gradleDependencyUpdate = "0.46.0"
+gradleDependencyUpdate = "0.47.0"
 junit = "4.13.2"
-kotlinx-coroutines = "1.4.1"
-leakcanary = "2.9.1"
+kotlinx-coroutines = "1.7.3"
+leakcanary = "2.13"
 libphonenumber = "8.13.5"
-moshi = "1.13.0"
-okhttp = "4.9.3"
+moshi = "1.15.0"
+okhttp = "4.12.0"
 retrofit = "2.9.0"
 timber = "5.0.1"
 mockk = "1.13.5"
@@ -118,7 +120,7 @@ mockk = "1.13.5"
 [libraries]
 
 android-material = { module = "com.google.android.material:material", version.ref = "androidMaterial" }
-android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version = "2.0.0" }
+android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugar-jdk" }
 
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "androidx-activity" }
