--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ captures/
 .cxx/
 
 # Google Services (e.g. APIs or Firebase)
-# google-services.json
+google-services.json
 
 # Freeline
 freeline.py
@@ -86,3 +86,4 @@ lint/tmp/
 # Mac
 .DS_Store
 /.idea/
+/mobile/kotox-auth/google-services.json
